--- a/rootdir/ueventd.rc
+++ b/rootdir/ueventd.rc
@@ -50,6 +50,7 @@ subsystem vfio
 /dev/hwbinder             0666   root       root
 /dev/vndbinder            0666   root       root
 /dev/vfio/*               0666   root       root
+/dev/usb/lp*		      0666	 root       root
 
 /dev/pmsg0                0222   root       log
 /dev/dma_heap/system      0444   system     system
