--- a/rootdir/ueventd.rc
+++ b/rootdir/ueventd.rc
@@ -1,7 +1,7 @@
 import /vendor/etc/ueventd.rc
 import /odm/etc/ueventd.rc
 
-firmware_directories /system/lib/firmware
+firmware_directories /vendor/firmware /system/lib/firmware
 modalias_handling enabled
 uevent_socket_rcvbuf_size 16M
 
